# elenchus

./: .gitignore  .pre-commit-config.yaml  INSTALL.md  README.md  __init__.py  main.py  pixi.toml  pyproject.toml  test_lazy_command.py  test_reset.py
cli/: app.py
cli/commands/: config.py  extract.py  generate.py  info.py  list_prompts.py  run_phase.py  set_config.py  test_config.py
config/: manager.py  schema.py  validation.py
core/: analysis.py  csv_manager.py  experiment_recorder.py  extractor.py  llm.py  llm_simple.py  model_registry.py  prompt_manager.py  test_generator.py
docs/: configuration.md
examples/: config.yaml  env.example
prompts/: README.md  prompt_config.yaml
prompts/templates/: chain_of_thought.txt  few_shot.txt  zero_shot.txt
utils/: cleanup_experiments.py  experiment_content_viewer.py  remove_all_experiments.py
